--- a/templates/messages.html
+++ b/templates/messages.html
@@ -43,15 +43,14 @@
   	</button> -->
 </div>
 <div id="update" class="text-center alert alert-info flash alert-dismissible fade show" role="alert">
-    <a class="alert-link">UPD (July 10, 2020):</a> Now Problems can be segregated based on <a class="alert-link">Problem Rating</a> as well. <a 
-   class="alert-link"> Unrated Problems</a> will be at the end.
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <a class="alert-link">UPD (July 14, 2020):</a> <a target="_blank" href="{{ url_for('team_mode') }}" class="alert-link"><i class="fas fa-users"></i> Team Mode</a> now available. Learn more about it <a target="_blank" class="alert-link" href="{{ url_for('team_mode') }}#teamModeDescription">here</a>.
+<!--     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     	<span aria-hidden="true">&times;</span>
-  	</button>
+  	</button> -->
 </div>
 <!-- Flashing Messages -->
 <div class="alert alert-warning flash alert-dismissible fade show" role="alert">
-    If you witness <a class="alert-link">Internal Server Error</a>, try again after sometime. If it persists raise an <a target="_blank" href="https://github.com/pirateksh/codeforces-upsolving-helper/issues" class="alert-link">issue</a> on github stating the <b>Codeforces Handle</b> you entered.
+    In case of <a class="alert-link">Internal Server Error</a>, try again after sometime. If it persists raise an <a target="_blank" href="https://github.com/pirateksh/codeforces-upsolving-helper/issues" class="alert-link">issue</a> on github stating the <b>Codeforces Handle</b> you entered.
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     	<span aria-hidden="true">&times;</span>
   	</button>
