--- a/templates/scripts.html
+++ b/templates/scripts.html
@@ -54,7 +54,11 @@
         }
 
         function f(e) {
-            document.getElementById('connecting_info').innerHTML = '<div class="d-flex align-items-center"> <strong>Connecting...</strong> <div class="spinner-border ml-auto" role="status" aria-hidden="true"></div></div>';
+            if(e === 'home') {
+                document.getElementById('connecting_info').innerHTML = '<div class="d-flex align-items-center"> <strong>Connecting...</strong> <div class="spinner-border ml-auto" role="status" aria-hidden="true"></div></div>';
+            } else if(e === 'team_mode') {
+                document.getElementById('connecting_info').innerHTML = '<div class="d-flex align-items-center"> <strong>Connecting...This might take a little longer than Normal Mode.</strong> <div class="spinner-border ml-auto" role="status" aria-hidden="true"></div></div>';
+            }
             fade(document.getElementById('connected_success'));
             fade(document.getElementById('connected_danger'));
         }
