--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -9,10 +9,10 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <button class="btn btn-dark nav-link"><a class="text-white" href="{{ url_for('team_mode') }}" target="_blank">
           <i class="fas fa-users"></i> Team Mode</a></button>
-      </li>
+      </li> -->
       <li class="nav-item">
         <button type="button" class="btn btn-dark nav-link" data-toggle="modal" data-target="#aboutModal">
           <a class="text-white"><i class="fas fa-info-circle"></i> About</a>
