--- a/templates/team_mode.html
+++ b/templates/team_mode.html
@@ -6,6 +6,14 @@
 	<main>
 		<div class="container">
 			<section class="mx-4 my-3 py-3">
+				<div class="d-flex justify-content-end">
+					<a href="{{ url_for('home_view') }}">
+						<button class="btn btn-info">
+							 Switch to <i class="fas fa-user"></i> Normal Mode
+						</button>
+					</a>
+				</div>
+				
 			    <!-- Messages Template Included -->
 			    {% include 'messages.html' %}
 			    <div id="connecting_info" class="text-center alert alert-dark flash alert-dismissible fade show" role="alert">
@@ -14,11 +22,17 @@
 				    	<span aria-hidden="true">&times;</span>
 				  	</button> -->
 				</div>
+				<div id="update" class="text-center alert alert-success flash alert-dismissible fade show" role="alert">
+				    <a class="alert-link">Upcoming:</a> <b><a class="alert-link">Unattempted Problem Recommender</a> (from previous contests) for Upsolving</b>. Stay Tuned! <i class="fas fa-business-time"></i>.
+				    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+				    	<span aria-hidden="true">&times;</span>
+				  	</button>
+				</div>
 				<div id="update" class="text-center alert alert-info flash alert-dismissible fade show" role="alert">
 				    <a class="alert-link">UPD (July 14, 2020):</a> <a href="{{ url_for('team_mode') }}" class="alert-link"><i class="fas fa-users"></i> Team Mode</a> now available. Learn more about it <a class="alert-link" href="{{ url_for('team_mode') }}#teamModeDescription">here</a>.
-				<!--     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+				    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
 				    	<span aria-hidden="true">&times;</span>
-				  	</button> -->
+				  	</button>
 				</div>
 				<!-- Flashing Messages -->
 				<div class="alert alert-warning flash alert-dismissible fade show" role="alert">
