--- a/templates/scripts.html
+++ b/templates/scripts.html
@@ -43,13 +43,33 @@
 
         function toggleSegregation(argument) {
             if (document.getElementById("radioByIndex").checked){
-                fade(document.getElementById('byRating'));
-                unfade(document.getElementById('byIndex'));    
+                document.getElementById('byRating').style.display = 'none';
+                document.getElementById('byIndex').style.display = 'initial';
+                // fade(document.getElementById('byRating'));
+                // unfade(document.getElementById('byIndex'));    
                 document.getElementById('segregationInfo').innerHTML = '<div class="text-center alert alert-primary flash alert-dismissible fade show" role="alert">Currently Problems are segregated based on <a class="alert-link"> <i class="fas fa-sort-alpha-down"></i> Index (A, B, C and so on)</a>.</div>'
             } else if (document.getElementById("radioByRating").checked){
-                fade(document.getElementById('byIndex'));
-                unfade(document.getElementById('byRating'));
+                document.getElementById('byIndex').style.display = 'none';
+                document.getElementById('byRating').style.display = 'initial';
+                // fade(document.getElementById('byIndex'));
+                // unfade(document.getElementById('byRating'));
                 document.getElementById('segregationInfo').innerHTML = '<div class="text-center alert alert-secondary flash alert-dismissible fade show" role="alert">Currently Problems are segregated based on <a class="alert-link"> <i class="fas fa-chart-line"></i> Rating (Less than 1000, Between 1000 and 1200, and so on)</a>.</div>'
+            }
+        }
+
+        function toggleProblemType(argument) {
+            if (document.getElementById("radioUnsolved").checked){
+                document.getElementById('idUnattempted').style.display = 'none';
+                document.getElementById('idUnsolved').style.display = 'initial';
+                // fade(document.getElementById('idUnattempted'));
+                // unfade(document.getElementById('idUnsolved'));    
+                // document.getElementById('segregationInfo').innerHTML = '<div class="text-center alert alert-primary flash alert-dismissible fade show" role="alert">Currently Problems are segregated based on <a class="alert-link"> <i class="fas fa-sort-alpha-down"></i> Index (A, B, C and so on)</a>.</div>'
+            } else if (document.getElementById("radioUnattempted").checked){
+                document.getElementById('idUnsolved').style.display = 'none';
+                document.getElementById('idUnattempted').style.display = 'initial';
+                // fade(document.getElementById('idUnsolved'));
+                // unfade(document.getElementById('idUnattempted'));
+                // document.getElementById('segregationInfo').innerHTML = '<div class="text-center alert alert-secondary flash alert-dismissible fade show" role="alert">Currently Problems are segregated based on <a class="alert-link"> <i class="fas fa-chart-line"></i> Rating (Less than 1000, Between 1000 and 1200, and so on)</a>.</div>'
             }
         }
 
