problemset updated CF Round #658

--- a/templates/team_mode.html
+++ b/templates/team_mode.html
@@ -105,7 +105,14 @@
 								{% endif %}
 							</div>
 							<div class="card-footer text-muted">
-								Star <i class="fas fa-star black-text"></i> the <a class="text-info" href="https://github.com/pirateksh/codeforces-upsolving-helper" target="_blank">repository</a> on Github if this helped you. <i class="fas fa-grin yellow-text"></i>
+								<div class="row">
+									<div class="col-6">
+										<b>Star <i class="fas fa-star black-text"></i></b> the <a class="text-info" href="https://github.com/pirateksh/codeforces-upsolving-helper" target="_blank">Github repository</a>. <i class="far fa-grin-beam red-text"></i>
+									</div>
+									<div class="col-6">
+										<b>Upvote <i class="text-success fas fa-caret-up"></i></b> the <a class="text-info" target="_blank" href="https://codeforces.com/blog/entry/79917"> Codeforces blog</a>. <i class="far fa-grin-beam red-text"></i>
+									</div>
+								</div>
 							</div>
 						</div>
 						
@@ -145,7 +152,14 @@
 					        
 						</div>
 						<div class="card-footer text-muted">
-						    Star <i class="fas fa-star black-text"></i> the <a class="text-info" href="https://github.com/pirateksh/codeforces-upsolving-helper" target="_blank">repository</a> on Github if this helped you. <i class="fas fa-grin yellow-text"></i>
+							<div class="row">
+								<div class="col-6">
+									<b>Star <i class="fas fa-star black-text"></i></b> the <a class="text-info" href="https://github.com/pirateksh/codeforces-upsolving-helper" target="_blank">Github repository</a>. <i class="far fa-grin-beam red-text"></i>
+								</div>
+								<div class="col-6">
+									<b>Upvote <i class="text-success fas fa-caret-up"></i></b> the <a class="text-info" target="_blank" href="https://codeforces.com/blog/entry/79917"> Codeforces blog</a>. <i class="far fa-grin-beam red-text"></i>
+								</div>
+							</div>
 						</div>
 					</div>
 				{% endif %}
