--- a/templates/home.html
+++ b/templates/home.html
@@ -97,7 +97,14 @@
 								{% endif %}
 							</div>
 							<div class="card-footer text-muted">
-								Star <i class="fas fa-star black-text"></i> the <a class="text-info" href="https://github.com/pirateksh/codeforces-upsolving-helper" target="_blank">repository</a> on Github if this helped you. <i class="fas fa-grin yellow-text"></i>
+								<div class="row">
+									<div class="col-6">
+										<b>Star <i class="fas fa-star black-text"></i></b> the <a class="text-info" href="https://github.com/pirateksh/codeforces-upsolving-helper" target="_blank">Github repository</a>. <i class="far fa-grin-beam red-text"></i>
+									</div>
+									<div class="col-6">
+										<b>Upvote <i class="text-success fas fa-caret-up"></i></b> the <a class="text-info" target="_blank" href="https://codeforces.com/blog/entry/79917"> Codeforces blog</a>. <i class="far fa-grin-beam red-text"></i>
+									</div>
+								</div>
 							</div>
 						</div>
 						<br/>
@@ -123,11 +130,18 @@
 							What is <img src="{{ url_for('static', filename='images/favicon.png') }}" height="30" class="d-inline-block align-top" alt="mdb logo"><b> <span class="text-warning">Codeforces</span> <span class="text-primary">Upsolving</span> <span class="text-danger">Helper</span></b> ?
 						</div>
 						<div class="card-body">
-							<p class="text-black-50">A web app developed using <a class="text-info" href="https://flask.palletsprojects.com/en/1.1.x/quickstart/#a-minimal-application" target="_blank">Flask</a> that compiles all the Problems on <a class="text-info" href="https://codeforces.com/" target="_blank">Codeforces</a> that you have attempted (submitted at least once) but could not get <span class="text-success">Accepted</span> verdict. For convenience, the problems can be segregated by <b>Index</b> (i.e. A, B, and so on) OR <b>Rating (i.e. Less than 1000, Between 1000 and 1200, and so on)</b>. Click on the Problem Name to visit the original problem page on <a class="text-info" href="https://codeforces.com/" target="_blank">Codeforces</a>, solve it, come back here and repeat. Good Luck and High Rating!
+							<p class="text-black-50">A web app developed using <a class="text-info" href="https://flask.palletsprojects.com/en/1.1.x/quickstart/#a-minimal-application" target="_blank">Flask</a> that compiles all the Problems on <a class="text-info" href="https://codeforces.com/" target="_blank">Codeforces</a> that you have attempted (submitted at least once) but could not get <span class="text-success">Accepted</span> verdict. For convenience, the problems can be segregated by <b>Index</b> (i.e. A, B, and so on) OR <b>Rating (i.e. Less than 1000, Between 1000 and 1200, and so on)</b>. <b>Unattempted Recommended Problems</b> are displayed in <b>Recommender Section</b>. Click on the Problem Name to visit the original problem page on <a class="text-info" href="https://codeforces.com/" target="_blank">Codeforces</a>, solve it, come back here and repeat. Good Luck and High Rating!
 							</p>
 						</div>
 						<div class="card-footer text-muted">
-						    Star <i class="fas fa-star black-text"></i> the <a class="text-info" href="https://github.com/pirateksh/codeforces-upsolving-helper" target="_blank">repository</a> on Github if this helped you. <i class="fas fa-grin yellow-text"></i>
+							<div class="row">
+								<div class="col-6">
+									<b>Star <i class="fas fa-star black-text"></i></b> the <a class="text-info" href="https://github.com/pirateksh/codeforces-upsolving-helper" target="_blank">Github repository</a>. <i class="far fa-grin-beam red-text"></i>
+								</div>
+								<div class="col-6">
+									<b>Upvote <i class="text-success fas fa-caret-up"></i></b> the <a class="text-info" target="_blank" href="https://codeforces.com/blog/entry/79917"> Codeforces blog</a>. <i class="far fa-grin-beam red-text"></i>
+								</div>
+							</div>
 						</div>
 					</div>
 				{% endif %}
