--- a/templates/problems.html
+++ b/templates/problems.html
@@ -8,13 +8,13 @@
 			<div class="row">
 				<div class="col-6">
 					<div class="custom-control custom-radio">
-					<input class="custom-control-input" type="radio" id="radioUnsolved" name="r"  checked>
+					<input class="custom-control-input" type="radio" id="radioUnsolved" name="problems"  checked>
 			  		<label class="custom-control-label" for="radioUnsolved"><i class="fas fa-underline"></i> Unsolved Problems</label>
 			  		</div>
 				</div>
 				<div class="col-6">
 					<div class="custom-control custom-radio">
-					<input class="custom-control-input" type="radio" id="radioUnattempted" name="r">
+					<input class="custom-control-input" type="radio" id="radioUnattempted" name="problems">
 			  		<label class="custom-control-label" for="radioUnattempted"><i class="fas fa-registered"></i> Recommended Problems</label>
 			  		</div>
 				</div>
@@ -162,41 +162,105 @@
 	<div class="card text-center">
 		<div class="card-header">
 			<strong><i class="fas fa-registered"></i> Recommended Problems</strong>
-			<br/>
-  			<small class="text-muted">Unattemped Problems from Previous Contests</small>
 		</div>
 		<div class="card-body">
 			<p>Problems will be classified into <b class="text-info">atmost 5 categories</b> namely - <span class="light-green-text accent-2 h6"><i class="fas fa-coffee"></i> Easy</span> , <span class="yellow-text lighten-1 h6"><i class="fas fa-football-ball"></i> Medium</span> , <span class="amber-text darken-3 h6"><i class="fas fa-align-justify"></i> Hard</span> , <span class="deep-orange-text h6"><i class="fas fa-chart-line"></i> Extreme</span> and <span class="red-text h6"><i class="fas fa-exclamation-triangle"></i> Impossible</span>.</p> 
-			<p>Each category will have <b class="text-info">atmost 10 Problems</b> at a time, sorted in <b class="text-info">increasing order of Rating</b>.</p> 
+			<p>Each category will have <b class="text-info">atmost 10 Problems</b> at a time from either your <b class="text-info">Past Contests</b> or <b class="text-info">All Problemset</b>, sorted in <b class="text-info">increasing order of Rating</b>.</p> 
 		</div>
 	</div>
-	{% for rating_category, problems in recommended_problems.items() %}
-		{% if problems|length > 0 %}
-		<br/>
-		<div class="card text-center">
-			<!-- <div class="card-header">
-				<b>
- -->				{% if rating_category == '1' %} <div class="light-green accent-2 card-header">
-				<b class="text-white">Easy (Want some <i class="fas fa-coffee"></i> Recreation ?)
-				{% elif rating_category == '2' %} <div class="yellow lighten-1 card-header">
-				<b>Medium (Want to <i class="fas fa-football-ball"></i> Warmup ?)
-				{% elif rating_category == '3' %} <div class="amber darken-3 card-header">
-				<b class="text-white">Hard (Want to <i class="fas fa-align-justify"></i> Maintain your Rating ?)
-				{% elif rating_category == '4' %} <div class="deep-orange card-header">
-				<b class="text-white">Extreme (Want to <i class="fas fa-chart-line"></i> Improve your Rating ?)
-				{% elif rating_category == '5' %} <div class="red card-header">
-				<b class="text-white">Impossible (Want some <i class="fas fa-exclamation-triangle"></i> Adrenaline Rush ?)
-				{% elif rating_category == '6' %} <div class="grey card-header">
-				<b>Unrated
-				{% endif %}
-				</b>
-			</div>
-			<div class="class-body">
-				{% for problem in problems %} 
-					<b><p><a class="text-info" href="{{ problem[2] }}" target="_blank">{{ problem[0] }} - {{ problem[1] }} {% if problem[3] < 10000 %}(Rating: {{ problem[3] }}){% endif %}</a></p></b>
-				{% endfor %}
-			</div>
+	<br/>
+
+	<div class="card text-center">
+		<div class="card-header">
+			<b><i class="fab fa-cuttlefish"></i> Past Contests</b> / <b><i class="fab fa-autoprefixer"></i> All Problemset</b>
 		</div>
-		{% endif %}
-	{% endfor %}
+		<div class="card-body">
+			<form onchange="toggleRecommendedType()">
+				<div class="row">
+					<div class="col-6">
+						<div class="custom-control custom-radio">
+						<input class="custom-control-input" type="radio" id="radioByContest" name="recommended"  checked>
+				  		<label class="custom-control-label" for="radioByContest"> <i class="fab fa-cuttlefish"></i> Past Contests</label>
+				  		</div>
+					</div>
+					<div class="col-6">
+						<div class="custom-control custom-radio">
+						<input class="custom-control-input" type="radio" id="radioByProblemset" name="recommended">
+				  		<label class="custom-control-label" for="radioByProblemset"><i class="fab fa-autoprefixer"></i> All Problemset</label>
+				  		</div>
+					</div>
+				</div>
+			</form>
+		</div>
+	</div>
+	<br/>
+	<section id="recommendedInfo">
+		<div class="text-center alert alert-primary flash alert-dismissible fade show" role="alert">
+	        These are Unattempted Problems from your <a class="alert-link"><i class="fab fa-cuttlefish"></i> Past Contests</a>.
+	    </div>	
+	</section>
+	<section id="idByContest">
+		{% for rating_category, problems in recommended_problems.rp_contest.items() %}
+			{% if problems|length > 0 %}
+			<br/>
+			<div class="card text-center">
+				<!-- <div class="card-header">
+					<b>
+	 -->				{% if rating_category == '1' %} <div class="light-green accent-2 card-header">
+					<b class="text-white">Easy (Want some <i class="fas fa-coffee"></i> Recreation ?)
+					{% elif rating_category == '2' %} <div class="yellow lighten-1 card-header">
+					<b>Medium (Want to <i class="fas fa-football-ball"></i> Warmup ?)
+					{% elif rating_category == '3' %} <div class="amber darken-3 card-header">
+					<b class="text-white">Hard (Want to <i class="fas fa-align-justify"></i> Maintain your Rating ?)
+					{% elif rating_category == '4' %} <div class="deep-orange card-header">
+					<b class="text-white">Extreme (Want to <i class="fas fa-chart-line"></i> Improve your Rating ?)
+					{% elif rating_category == '5' %} <div class="red card-header">
+					<b class="text-white">Impossible (Want some <i class="fas fa-exclamation-triangle"></i> Adrenaline Rush ?)
+					{% elif rating_category == '6' %} <div class="grey card-header">
+					<b>Unrated
+					{% endif %}
+					</b>
+				</div>
+				<div class="class-body">
+					{% for problem in problems %} 
+						<b><p><a class="text-info" href="{{ problem[2] }}" target="_blank">{{ problem[0] }} - {{ problem[1] }} {% if problem[3] < 10000 %}(Rating: {{ problem[3] }}){% endif %}</a></p></b>
+					{% endfor %}
+				</div>
+			</div>
+			{% endif %}
+		{% endfor %}
+	</section>
+
+	<section id="idByProblemset" style="display: none;">
+		{% for rating_category, problems in recommended_problems.rp_all.items() %}
+			{% if problems|length > 0 and rating_category != 6 %}
+			<br/>
+			<div class="card text-center">
+				<!-- <div class="card-header">
+					<b>
+	 -->				{% if rating_category == '1' %} <div class="light-green accent-2 card-header">
+					<b class="text-white">Easy (Want some <i class="fas fa-coffee"></i> Recreation ?)
+					{% elif rating_category == '2' %} <div class="yellow lighten-1 card-header">
+					<b>Medium (Want to <i class="fas fa-football-ball"></i> Warmup ?)
+					{% elif rating_category == '3' %} <div class="amber darken-3 card-header">
+					<b class="text-white">Hard (Want to <i class="fas fa-align-justify"></i> Maintain your Rating ?)
+					{% elif rating_category == '4' %} <div class="deep-orange card-header">
+					<b class="text-white">Extreme (Want to <i class="fas fa-chart-line"></i> Improve your Rating ?)
+					{% elif rating_category == '5' %} <div class="red card-header">
+					<b class="text-white">Impossible (Want some <i class="fas fa-exclamation-triangle"></i> Adrenaline Rush ?)
+					{% elif rating_category == '6' %} <div class="grey card-header">
+					<b>Unrated
+					{% endif %}
+					</b>
+				</div>
+				<div class="class-body">
+					{% for problem in problems %} 
+						<b><p><a class="text-info" href="{{ problem[2] }}" target="_blank">{{ problem[0] }} - {{ problem[1] }} (Rating: {{ problem[3] }})</a></p></b>
+					{% endfor %}
+				</div>
+			</div>
+			{% endif %}
+		{% endfor %}
+	</section>
+	
 </section>
